--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .env
 my_env/
 __pycache__/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+*.pyc
+*.pyo
