--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up AWS credentials
-      - name: Configure AWS CLI
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -24,11 +24,13 @@ jobs:
 
       # Step 3: Install Elastic Beanstalk CLI
       - name: Install Elastic Beanstalk CLI
-        run: |
-          pip install awsebcli
+        run: pip install awsebcli
 
-      # Step 4: Deploy to Elastic Beanstalk
-      - name: Deploy Application
+      # Step 4: Initialize Elastic Beanstalk
+      - name: Initialize Elastic Beanstalk
         run: |
-          eb init -p python-3.12 ai-voice-assistant-test --region ${{ secrets.AWS_REGION }} --interactive
-          eb deploy
+          eb init -p python-3.12 ai-voice-assistant-test --region ${{ secrets.AWS_REGION }} --interactive=false
+
+      # Step 5: Deploy to Elastic Beanstalk
+      - name: Deploy to Elastic Beanstalk
+        run: eb deploy
