--- a/.ebignore
+++ b/.ebignore
@@ -1,8 +1,34 @@
+# Python files
 __pycache__/
 *.pyc
 *.pyo
-my_env/
+
+# Environment files
 .env
 
-# Ignore Elastic Beanstalk configuration
-.elasticbeanstalk/
+# Virtual environment
+my_env/
+
+# Log files
+*.log
+
+# Temporary and backup files
+*.tmp
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# IDE/Editor-specific files
+.vscode/
+.idea/
+
+# Deployment artifacts
+build/
+dist/
+*.egg-info/
+
+# Elastic Beanstalk configuration
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
