--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
+# Environment files
 .env
 my_env/
-__pycache__/
 
+# Python cache files
+__pycache__/
 *.pyc
 *.pyo
+
+# Log files
+*.log
+
+# Elastic Beanstalk files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
+# IDE/Editor-specific files
+.vscode/
+.idea/
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
